--- a/cloudflare-workers/wrangler.toml
+++ b/cloudflare-workers/wrangler.toml
@@ -1,6 +1,7 @@
 name = "document-analysis-api"
 main = "src/index.js"
 compatibility_date = "2024-01-01"
+compatibility_flags = ["nodejs_compat"]
 
 # D1 Database binding
 [[d1_databases]]
@@ -22,4 +23,5 @@ CORS_ORIGIN = "*"
 # Secrets (wrangler secret put komutuyla eklenecek)
 # N8N_WEBHOOK_URL
 # API_SECRET
-
+# N8N_EXPORT_WEBHOOK_URL
+# R2_PUBLIC_URL
